# crm_n8n

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260703_0001_init.py  20260706_0002_conversation_bot_paused.py  20260706_0003_whatsapp_account_is_test.py  20260708_0004_attachment_transcript.py  20260708_0005_message_origin_system.py  20260713_0006_conversation_tags.py  20260713_0007_lead_field_definitions.py  20260713_0008_bot_paused_by_global.py  20260714_0009_lead_archived_at.py  20260714_0010_lead_external_key_uniq.py
apps/api/app/: main.py
apps/api/app/core/: config.py  crypto.py  errors.py  ids.py  logging.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/db/models/: __init__.py  accounts.py  crm.py  enums.py  identity.py  messaging.py  ops.py  tags.py
apps/api/app/infra/: queue.py  storage.py
apps/api/app/modules/: task_handlers.py
apps/api/app/modules/accounts/: service.py
apps/api/app/modules/analytics/: router.py
apps/api/app/modules/audit/: service.py
apps/api/app/modules/auth/: deps.py  passwords.py  permissions.py  router.py  service.py
apps/api/app/modules/config/: router.py
apps/api/app/modules/health/: router.py
apps/api/app/schemas/: hooks.py
apps/api/scripts/: generate_ddl.py  seed.py
apps/api/tests/: conftest.py  test_app.py  test_auth_units.py  test_crypto.py  test_ids.py  test_parser.py  test_schema_aliases.py  test_security.py  test_window.py
(+60 files in other folders)
